# ComfyUI-FL-VoxCPM

./: .tracking  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: VoxCPM TTS.json
modules/: audio_io.py  audio_utils.py  dataset_utils.py  loader.py  model_info.py  patcher.py  trainer.py  trainer_v2.py
nodes/: __init__.py  audio_crop_node.py  dataset_maker_node.py  lora_trainer_node.py  train_config_node.py  train_config_v2_node.py  transcribe_node.py  tts_node.py  tts_v2_node.py
src/voxcpm/: core.py  zipenhancer.py
src/voxcpm/model/: voxcpm.py  voxcpm2.py
src/voxcpm/modules/audiovae/: audio_vae_v2.py
src/voxcpm/modules/locdit/: local_dit.py  unified_cfm.py
src/voxcpm/modules/locenc/: local_encoder.py
src/voxcpm/modules/minicpm4/: config.py  model.py
src/voxcpm/training/: data.py
web/: appearance.js  voxcpm_training.js
