[project]
name = "ComfyUI-FL-VoxCPM"
description = "VoxCPM TTS for ComfyUI - Text-to-speech with voice cloning, voice design, V2 support, and LoRA training"
version = "2.2.2"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.36.2",
    "safetensors",
    "huggingface_hub",
    "einops",
    "inflect",
    "addict",
    "wetext",
    "pydantic",
    "simplejson",
    "sortedcontainers",
    "soundfile",
    "diffusers",
    "tqdm",
    "bitsandbytes",
    "argbind",
    "datasets",
]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI-FL-VoxCPM"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "ComfyUI-FL-VoxCPM"
Icon = "https://avatars.githubusercontent.com/u/55672949"
